codepkg/objects/F_42_Comment__c.object
<CustomObject>
    <description>This object is used to capture the comments made under each F-42</description>
    <fields>
        <fullName>Comment_By__c</fullName>
        <label>Comment By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mutual Aid Staff</fullName>
                </value>
                <value>
                    <fullName>Agency Primary User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F_42__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>F-42</label>
        <referenceTo>F42__c</referenceTo>
        <relationshipLabel>14. COMMENTS</relationshipLabel>
        <relationshipName>F_42_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Military time</inlineHelpText>
        <label>Time</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>F-42 Comment</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>F-42 Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>